add base css styles for body and font

--- a/index.html
+++ b/index.html
@@ -4,16 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Enkelt recept på pannkakor</title>
-  <link href="style.css" type="text/css" rel="stylesheet" />
+  <link href="/styles/style.css" type="text/css" rel="stylesheet" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
 <head>
 
 <body>
   <main>
-    <img src="images/header-image.png" alt="Pannkakor med grädde och hallon"/>
-    
+    <header>
+      <img src="images/header-image.png" alt="Pannkakor med grädde och hallon"/>
+    </header>
     <h1>Enkelt recept på pannkakor</h1>
     <p>Gör traditionella tunna pannkakor med detta enkla och goda pannkaksrecept.</p>
     <h2>Ingredienser</h2>
+    <p>För 4 personer</p>
     <ul>
       <li>2 1/2 dl vetemjöl</li>
       <li>1/2 tsk salt</li>
@@ -25,7 +30,7 @@
 
     <h2>Så här gör du</h2>
     <ol>
-      <li>Blanda mjöl och salt i en bunke. </li>
+      <li>Blanda mjöl och salt i en bunke.</li>
       <li>Vispa i hälften av mjölken och vispa till en slät smet. </li>
       <li>Vispa i resten av mjölken och äggen. </li>
       <li>Låt smeten vila ca 10 minuter.</li>
