Implement responsive design and update pictures

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <img src="images/header-image.png" alt="Pannkakor med grädde och hallon"/>
     </header>
     <h1>Enkelt recept på pannkakor</h1>
-    <p>Gör traditionella tunna pannkakor med detta enkla och goda pannkaksrecept.</p>
+    <p id="top-text">Gör traditionella tunna pannkakor med detta enkla och goda pannkaksrecept.</p>
     <h2>Ingredienser</h2>
     <p>För 4 personer</p>
     <ul>
@@ -39,8 +39,10 @@
     </ol>
 
     <h2>Serveringsförslag</h2>
-    <img src="images/servering2.png" alt="Naturella pannkakor"/>
-    <img src="images/servering1.png" alt="Pannkakor med apelsin"/>
+    <section class="image-container">
+      <img src="images/servering1.png" alt="Pannkakor med apelsin"/>
+      <img src="images/servering2.png" alt="Naturella pannkakor"/>
+    </section> 
   </main>
 </body>
 </html>
